Update crypto-primitives and e-voting-libraries.